FontSize Options Added,    FontFamily Added,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,  Options Added, Image Width, Opacity, BorderRadius,Blur, Contrast, Invert ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,, some StteDelay issues related to ImageFilters exist

--- a/src/Header.css
+++ b/src/Header.css
@@ -47,8 +47,9 @@
 
 /* workspace css */
 .WorkSpace {
+  min-width: 50vw;
   flex: 0.7;
-  margin-top: 5vh;
+  margin-top: 1.5vh;
   height: 77.8vh;
   justify-content: center;
   /* overflow-x: auto; */
